syntax.output
Terminals unused in grammar

   LOWER_THAN_RB


State 26 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error SEMI
    8       | Specifier error
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB INT error RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | LC error RC
   31       | LC error

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | error RP

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error
   46    | Specifier DecList error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | ID LP Args error RP
   70    | ID LP error RP
   71    | Exp LB Exp error RB
   72    | LP Exp error RP

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 22 25 30 31 40 41 45 46 69 70 71 72
INT (258) 20 21 67
FLOAT (259) 68
ID (260) 16 18 19 23 24 25 62 63 65 66 69 70
SEMI (261) 4 5 7 9 34 36 40 44 46
COMMA (262) 11 26 48 73
ASSIGNOP (263) 50 51
RELOP (264) 54
PLUS (265) 55
MINUS (266) 56 60
STAR (267) 57
DIV (268) 58
OR (269) 53
AND (270) 52
DOT (271) 65
NOT (272) 61
TYPE (273) 12
LP (274) 23 24 25 37 38 39 59 62 63 69 70 72
RP (275) 23 24 25 37 38 39 41 59 62 63 69 70 72
LB (276) 20 21 22 64 71
RB (277) 20 21 22 64 71
LC (278) 14 29 30 31
RC (279) 14 29 30
STRUCT (280) 14 15
RETURN (281) 36
IF (282) 37 38
ELSE (283) 38
WHILE (284) 39
LOWER_THAN_ELSE (285)
LOWER_THAN_SEMI (286)
LOWER_THAN_RC (287)
LOWER_THAN_RB (288)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
ExtDefList (36)
    on left: 2 3, on right: 1 2
ExtDef (37)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (38)
    on left: 10 11, on right: 4 7 11
Specifier (39)
    on left: 12 13, on right: 4 5 6 7 8 9 28 44 45 46
StructSpecifier (40)
    on left: 14 15, on right: 13
OptTag (41)
    on left: 16 17, on right: 14
Tag (42)
    on left: 18, on right: 15
VarDec (43)
    on left: 19 20 21 22, on right: 10 11 20 21 22 28 49 50
FunDec (44)
    on left: 23 24 25, on right: 6
VarList (45)
    on left: 26 27, on right: 23 26
ParamDec (46)
    on left: 28, on right: 26 27
CompSt (47)
    on left: 29 30 31, on right: 6 35
StmtList (48)
    on left: 32 33, on right: 29 32
Stmt (49)
    on left: 34 35 36 37 38 39 40 41, on right: 32 37 38 39
DefList (50)
    on left: 42 43, on right: 14 29 42
Def (51)
    on left: 44 45 46, on right: 42
DecList (52)
    on left: 47 48, on right: 44 45 46 48
Dec (53)
    on left: 49 50, on right: 47 48
Exp (54)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72, on right: 34 36 37 38 39 50 51 52 53 54 55 56 57 58
    59 60 61 64 65 71 72 73 74
Args (55)
    on left: 73 74, on right: 62 69 73


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error SEMI
    8       | Specifier . error
    9       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error .
    9       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 8 (ExtDef)


State 14

   19 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error SEMI

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 21

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    7 ExtDef: Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 36


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


State 25

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . INT error RB
   22       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 26

   29 CompSt: LC . DefList StmtList RC
   30       | LC . error RC
   31       | LC . error

    error   shift, and go to state 41
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error
   46    | Specifier . DecList error SEMI

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 29

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 30

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 30


State 31

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 48


State 32

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 33

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 49


State 34

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 35

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 27 (VarList)


State 36

    7 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 37

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 38

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 39

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 40

   20 VarDec: VarDec LB INT . RB
   21       | VarDec LB INT . error RB

    error  shift, and go to state 53
    RB     shift, and go to state 54


State 41

   30 CompSt: LC error . RC
   31       | LC error .

    RC  shift, and go to state 55

    $default  reduce using rule 31 (CompSt)


State 42

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 26
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 43

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   22       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 25

    $default  reduce using rule 49 (Dec)


State 44

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error
   46    | Specifier DecList . error SEMI

    error  shift, and go to state 71
    SEMI   shift, and go to state 72


State 45

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 47 (DecList)


State 46

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 47

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 48

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 49

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 28 (ParamDec)


State 50

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 51

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 74
    ParamDec         go to state 35


State 52

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 53

   21 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 75


State 54

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 55

   30 CompSt: LC error RC .

    $default  reduce using rule 30 (CompSt)


State 56

   40 Stmt: error . SEMI
   41     | error . RP

    SEMI  shift, and go to state 76
    RP    shift, and go to state 77


State 57

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 58

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 59

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   69    | ID . LP Args error RP
   70    | ID . LP error RP

    LP  shift, and go to state 78

    $default  reduce using rule 66 (Exp)


State 60

   60 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 79


State 61

   61 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 62

   59 Exp: LP . Exp RP
   72    | LP . Exp error RP

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 81


State 63

   36 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 82


State 64

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 65

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


State 66

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 67

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 68

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 26
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 86
    Stmt      go to state 68
    Exp       go to state 69


State 69

   34 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    OR        shift, and go to state 94
    AND       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 70

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 98


State 71

   45 Def: Specifier DecList error .
   46    | Specifier DecList error . SEMI

    SEMI  shift, and go to state 99

    $default  reduce using rule 45 (Def)


State 72

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 73

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 100
    Dec      go to state 45


State 74

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 75

   21 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 21 (VarDec)


State 76

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 77

   41 Stmt: error RP .

    $default  reduce using rule 41 (Stmt)


State 78

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   69    | ID LP . Args error RP
   70    | ID LP . error RP

    error  shift, and go to state 101
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 79

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    RELOP  shift, and go to state 89
    STAR   shift, and go to state 92
    DIV    shift, and go to state 93
    OR     shift, and go to state 94
    AND    shift, and go to state 95
    DOT    shift, and go to state 96
    LB     shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 80

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    RELOP  shift, and go to state 89

    $default  reduce using rule 61 (Exp)


State 81

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB Exp error RB
   72    | LP Exp . error RP

    error     shift, and go to state 105
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    OR        shift, and go to state 94
    AND       shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 106
    LB        shift, and go to state 97


State 82

   36 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    OR        shift, and go to state 94
    AND       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 83

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 108


State 84

   39 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 109


State 85

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 86

   32 StmtList: Stmt StmtList .
